# platformer

./: Cargo.toml  index.html
src/: extrapolate.rs  interpolate.rs  loading.rs  main.rs  mechanics.rs  menu.rs  running.rs  state.rs  ui.rs
src/mechanics/: action.rs  damage.rs  effect.rs  payload.rs  projectile.rs
src/menu/: main_menu.rs  play_menu.rs  settings.rs
src/running/: active.rs  editing.rs
web/: platformer.js
